--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
   font-size:2.5rem;
 }
 .scnd p{
-  color:#f498b8;
+  color:#AD464D;
   font-weight:200;
   font-size:1.125rem;
   line-height: 2;
